--- a/service.html
+++ b/service.html
@@ -534,10 +534,10 @@
     </div> -->
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-5">
+   <div class="container-fluid bg-dark text-white-50 footer  pt-5">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-md-6 col-lg-6">
+                <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <a href="index.html" class="d-inline-block mb-3">
                         <h3 class="text-white">PUBLICATIONHUB</h3>
                     </a>
@@ -549,26 +549,29 @@
                         York. Propublicationhub operates globally with regional teams supporting researchers locally.
                     </p>
                 </div>
-                <div class="col-md-6 col-lg-3">
+
+                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
                     <h5 class="text-white mb-4">FOLLOW US</h5>
-                    <a class="btn btn-link" href="">Facebook</a>
-                    <a class="btn btn-link" href="">Instagram</a>
-                    <a class="btn btn-link" href="">Linkedin</a>
-                    <a class="btn btn-link" href="">Youtube</a>
+                    <a class="btn btn-link" href="https://www.facebook.com/propublicationhub">Facebook</a>
+                    <a class="btn btn-link" href="https://www.instagram.com/propublicationhub">Instagram</a>
+                    <a class="btn btn-link" href="https://www.linkedin.com/company/propublication-hub">Linkedin</a>
+                    <a class="btn btn-link" href="https://www.x.com/propublicationhub">Twitter</a>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
                     <h5 class="text-white mb-4">CONTACT US</h5>
-                    <a class="btn btn-link" href="">+91 9876543210</a>
-                    <a class="btn btn-link" href="">info@publicationhub.com</a>
-                    <a class="btn btn-link" href="">www.publicationhub.com</a>
+                    <a class="btn btn-link" href="tel:+447418352021">+44 7418 352021</a>
+                    <a class="btn btn-link" href="mailto:info@propublicationhub.com">info@propublicationhub.com</a>
+
+
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container wow fadeIn" data-wow-delay="0.1s">
             <div class="copyright">
                 <div class="row">
-                    <p class="col-md-6 col-6 justify-content-end mb-3">Privacy Policy | Terms & Conditions</p>
-                    <p class="col-md-6 text-end mb-3 copyright-rs">Copyright © 2021 - ALL RIGHTS RESERVED</p>
+
+                    <p class="col-md-6 col-6  justify-content-end mb-3">Privacy Policy | Terms & Conditions</p>
+                    <p class="col-md-6  text-end mb-3 copyright-rs">Copyright © 2021 - ALL RIGHTS RESERVED</p>
                 </div>
                 <p class="mt-2">All contents of www.propublicationhub.com are protected under the International
                     Copyright Act. All rights on this Web Site are reserved and no part of this Site shall be
@@ -576,8 +579,11 @@
                     electrostatic, magnetic tape, mechanical, printing, photocopying, recording or otherwise, including
                     the right of translation in any language, without the permission of Crimson Interactive Inc. (USA)
                 </p>
+
+
             </div>
         </div>
+    </div>
     </div>
     <!-- Footer End -->
 
