--- a/grant-wtiting.html
+++ b/grant-wtiting.html
@@ -32,6 +32,16 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <style>
+        .red-bullet-list {
+            list-style: disc inside;
+            padding-left: 0;
+        }
+        .red-bullet-list li::marker {
+            color: #dc3545;
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 
 <body>
@@ -58,7 +68,7 @@
             <div class="collapse navbar-collapse" id="mainNavbar">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-dark " aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active text-dark fw-bold" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-dark" href="#" id="primaryDropdown" role="button"
@@ -81,7 +91,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="secondaryDropdown">
                             <li><a class="dropdown-item " href="citation-booster.html">Citation Booster</a></li>
-                            <li><a class="dropdown-item" href="grant-wtiting.html">Grant Writing</a></li>
+                            <li><a class="dropdown-item text-danger" href="grant-wtiting.html">Grant Writing</a></li>
                             <li><a class="dropdown-item" href="poster-preparation.html">Poster Preparation</a></li>
                         </ul>
                     </li>
@@ -89,7 +99,7 @@
                         <a class="nav-link text-dark" href="#">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark text-danger" href="contact.html">Contact</a>
+                        <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <a href="#" class="btn btn-danger rounded-pill ms-lg-3 px-4 py-2 d-none d-lg-block">Get A Quote</a>
@@ -102,85 +112,45 @@
         <div class="container pt-5">
             <div class="row g-5 pt-2">
                 <div class="col-lg-12 text-center">
-                    <h1 class="display-5 text-white animated slideInDown">Contact Us</h1>
-                    <p class="text-white mb-4 animated slideInUp">We'd love to hear from you! Reach out for any queries, support, or collaboration opportunities.</p>
+                    <h1 class="display-5 text-white animated slideInDown">Grant Writing Service</h1>
+                    <p class="text-white mb-4 animated slideInUp">Submit a comprehensive and totally compliant research grant</p>
                 </div>
             </div>
         </div>
     </div>
     <!-- Hero End -->
 
-    <!-- Contact Section Start -->t-5
+    <div class="container">
+    <p class="fw-bold text-dark mt-5">
+        Boost your chances of securing funding with a persuasive research grant proposal written by Propublicationhub's team of expert grant writers, consultants, and editors.
 
-    <div class="container p-5 m-5 rounded shadow-sm bg-danger ">
-        <div class="row g-5 align-items-center justify-content-center">
-            <!-- Contact Info -->
-            <div class="col-lg-5 mb-5 mb-lg-0 ">
-                <div class="text-white  h-100">
-                    <h3 class="mb-4 text-white">Get In Touch</h3>
-                    <p class="mb-4">Our team is here to answer your questions and provide the support you need. Fill out the form or use the contact details below.</p>
-                    <ul class="list-unstyled mb-4">
-                        <li class="mb-3 d-flex align-items-center"><i class="fa fa-map-marker-alt text-white me-3"></i> 123 Main Street, City, Country</li>
-                        <li class="mb-3 d-flex align-items-center"><i class="fa fa-envelope text-white me-3"></i> info@publicationhub.com</li>
-                        <li class="mb-3 d-flex align-items-center"><i class="fa fa-phone-alt text-white me-3"></i> +91 9876543210</li>
-                    </ul>
-                    <div class="d-flex gap-2">
-                        <a class="btn btn-outline-danger btn-sm rounded-circle" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-danger btn-sm rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-danger btn-sm rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-danger btn-sm rounded-circle" href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!-- Contact Form -->
-            <div class="col-lg-7 bg-white rounded ">
-                <div class="p-4">
-                    <h3 class="mb-4 text-danger">Send Us a Message</h3>
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" placeholder="Your Name" required>
-                            </div>
-                            <div class="col-md-6">
-                                <input type="email" class="form-control" placeholder="Your Email" required>
-                            </div>
-                        </div>
-                        <div class="row g-3 mt-2">
-                            <div class="col-12">
-                                <input type="text" class="form-control" placeholder="Subject" required>
-                            </div>
-                        </div>
-                        <div class="row g-3 mt-2">
-                            <div class="col-12">
-                                <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
-                            </div>
-                        </div>
-                        <div class="row g-3 mt-3">
-                            <div class="col-12">
-                                <button class="btn btn-danger px-4 py-2 rounded-pill" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+    </p>
+    <p class="mt-5"> Conducting research is a costly affair. With provisions needed for everything from equipment to specialist technical staff to conference travel and publication charges, acquiring financial support in the form of a grant is crucial. Once underway, grants can enable you to expand the scope of your research or even to form new collaborations and develop new research projects.
+
+    </p>
+    <p class="mt-5">However, securing  research grants can be challenging. Not only is demand high, but the process of academic grant writing can be daunting, particularly to new researchers. Whether you're applying to the state or federal government, a funding agency, or even your own institution, your proposal must be professionally written and sufficiently compelling to convince the reviewer or selection panel to choose you over other worthy applicants.</p>
+    <p class="mt-5">
+        At Propublicationhub, we understand how important it is to secure funding. We also know just how difficult and time-consuming writing a grant can be. That is why we offer a comprehensive grant proposal writing services to take the pressure off. Our team of expert consultants, writers, and editors can help you with:
+    </p>
+    <ul class="red-bullet-list  mt-5">
+        <li class="fw-bold text-dark">
+            Putting together a clear, persuasive proposal
+        </li>
+        <li class="fw-bold text-dark">
+            Reviewing and/or editing the drafts of the proposal written by you
+        </li>
+        <li class="fw-bold text-dark">
+            Comprehensively evaluating the final written proposal to ensure compliance with all requirements
+        </li>
+        
+        
+    </ul>
+    <p class="mt-5">
+        When it comes to evaluating grant proposals, Propublicationhub  understands that every industry is unique and comes with its own specific set of requirements. That is why our experts are all industry and subject-area specialists. By using this service, Propublicationhub  can provide you with the relevant expertise to help give your research grant proposal the best possible chance of securing the funding you seek.
+    </p>
     </div>
-    <!-- Contact Section End -->
-
-    <!-- Map/Location Section (Optional) -->
-    <div class="container m-5 ">
-        <div class=" ">
-            <div class="">
-                <div class="rounded overflow-hidden shadow-sm">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019019857378!2d-122.4194151846812!3d37.7749297797597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808c7e6b1b1b%3A0x4a0b8b8b8b8b8b8b!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1514524647889" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Map/Location Section End -->
-
     <!-- Footer Start -->
-   <div class="container-fluid bg-dark text-white-50 footer  pt-5">
+    <div class="container-fluid bg-dark text-white-50 footer  pt-5">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
