--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                     </div>
                     <div class="d-flex align-items-center mt-4">
                         <a class="btn btn-danger rounded-pill px-4 me-3" href="">Get A Quote</a>
-                        <a class="btn btn-outline-danger btn-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-danger btn-square me-3" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-danger btn-square me-3" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-danger btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-danger btn-square me-3" href="https://www.facebook.com/propublicationhub"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-danger btn-square me-3" href="https://www.twitter.com/propublicationhub"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-danger btn-square me-3" href="https://www.instagram.com/propublicationhub"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-danger btn-square" href="https://www.linkedin.com/company/propublication-hub"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
@@ -599,9 +599,9 @@
                             <div class="service-icon btn-square mx-auto mb-3 text-danger">
                                 <i class="fa fa-pen-square fa-2x text-danger"></i>
                             </div>
-                            <h5 class="mb-3">Manuscript Formatting and Artwork Editing Services</h5>
+                            <h5 class="">Manuscript Formatting and Artwork Editing Services</h5>
                             <p>Professional manuscript formatting and artwork correction/formatting as per journal
-                                requirements.</p> <br>
+                                requirements.</p> 
                             <div class="flex manu align-items-center">
                                 <span class=" p-2">Formatting</span>
                                 <span class="p-2">Artwork Editing</span>
@@ -855,7 +855,7 @@
     </div>
     </div>
     </div>
-    </div> -->
+    </div> 
 
 
 
@@ -910,7 +910,7 @@
                     <p class="col-md-6 col-6  justify-content-end mb-3">Privacy Policy | Terms & Conditions</p>
                     <p class="col-md-6  text-end mb-3 copyright-rs">Copyright © 2021 - ALL RIGHTS RESERVED</p>
                 </div>
-                <p class="mt-2">All contents of www.propublicationhub.com are protected under the International
+                <p class="mt-2 ">All contents of www.propublicationhub.com are protected under the International
                     Copyright Act. All rights on this Web Site are reserved and no part of this Site shall be
                     reproduced, stored in a retrieval system, or transmitted in any form or by any means - electronic,
                     electrostatic, magnetic tape, mechanical, printing, photocopying, recording or otherwise, including
