--- a/citation-booster.html
+++ b/citation-booster.html
@@ -43,6 +43,13 @@
         .accordion-button:not(.collapsed)::after {
             filter: brightness(0) invert(1);
         }
+
+        /* Animation delays */
+        .wow-delay-1 { animation-delay: 0.2s; }
+        .wow-delay-2 { animation-delay: 0.4s; }
+        .wow-delay-3 { animation-delay: 0.6s; }
+        .wow-delay-4 { animation-delay: 0.8s; }
+        .wow-delay-5 { animation-delay: 1s; }
     </style>
 </head>
 
@@ -50,19 +57,19 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center wow fadeInLeft" href="index.html">
                 <img src="https://propublicationhub.com/images/common/logo-header.png" alt="Logo" height="40"
                     class="me-2">
                 <span class="fw-bold text-danger" style="font-size:1.5rem;"><span class="text-dark"></span></span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+            <button class="navbar-toggler wow fadeInRight" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
                 aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mainNavbar">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active  text-dark " aria-current="page" href="index.html">Home</a>
+                    <li class="nav-item wow fadeInDown" data-wow-delay="0.1s">
+                        <a class="nav-link active text-dark" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-dark" href="#" id="primaryDropdown" role="button"
@@ -87,6 +94,10 @@
                             <li><a class="dropdown-item text-danger" href="citation-booster.html">Citation Booster</a></li>
                             <li><a class="dropdown-item" href="grant-wtiting.html">Grant Writing</a></li>
                             <li><a class="dropdown-item" href="poster-preparation.html">Poster Preparation</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Video Development</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Statistical Analysis</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Graphical Analysis</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -96,7 +107,7 @@
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-danger rounded-pill ms-lg-3 px-4 py-2 d-none d-lg-block">Get A Quote</a>
+                <a href="contact.html" class="btn btn-danger rounded-pill ms-lg-3 px-4 py-2 d-none d-lg-block wow fadeInRight">Get A Quote</a>
             </div>
         </div>
     </nav>
@@ -107,8 +118,8 @@
         <div class="container pt-5">
             <div class="row g-5 pt-2">
                 <div class="col-lg-12 text-center">
-                    <h1 class="display-5 text-white animated slideInDown">Citation Booster</h1>
-                    <p class="text-white mb-4 animated slideInUp">Propublicationhub's comprehensive content writing
+                    <h1 class="display-5 text-white wow fadeInDown">Citation Booster</h1>
+                    <p class="text-white mb-4 wow fadeInUp">Propublicationhub's comprehensive content writing
                         package developed with the sole aim of helping you achieve the recognition your work deserves.
                     </p>
                 </div>
@@ -119,76 +130,65 @@
 
     <!-- Service Content Start -->
     <div class="container py-5">
-
-
-        <div class="row align-items-center  mb-5 mt-5">
-            <h3 class="  mt-2 pb-2 uppercase fw-bold">CITATION VALUE PACK</h3>
+        <div class="row align-items-center mb-5 mt-5">
+            <h3 class="mt-2 pb-2 uppercase fw-bold wow fadeInLeft">CITATION VALUE PACK</h3>
             <div class="col-md-7">
-
-                <p>
+                <p class="wow fadeInLeft wow-delay-1">
                     Citation Booster combines three services: <span class="fw-bold text-danger">Simplified Abstracts,
                         Scientific News Report, and Tweetable Abstracts.</span> Our content experts turn your published
                     research into a variety of high-quality, accessible formats suitable for digital channels, including
                     social media, web portals, and online news platforms, keeping your original research in mind at all
                     times.
                 </p>
-                <a href="contact.html" class="btn btn-danger rounded-pill mt-2">Get Started</a>
+                <a href="#news" class="btn btn-danger rounded-pill mt-2 wow fadeInLeft wow-delay-2">Get Started</a>
             </div>
 
-            <div class="col-5 text-center border rounded mb-4 ">
-                <div class=" ">
-
-                </div>
-                <div class="row mt-4 ">
-
-                    <div class="  col-4 ">
+            <div class="col-5 text-center border rounded mb-4 wow fadeInRight">
+                <div class="row mt-4">
+                    <div class="col-4 wow fadeInUp wow-delay-1">
                         <i class="fa fa-envelope-open-text text-danger fa-2x"></i>
-                        <p> Scientific News Report</p>
+                        <p>Scientific News Report</p>
                     </div>
-                    <div class="  col-4">
+                    <div class="col-4 wow fadeInUp wow-delay-2">
                         <i class="fa fa-project-diagram text-danger fa-2x"></i>
                         <p>Simplified <br> Abstracts</p>
                     </div>
-                    <div class="  col-4">
+                    <div class="col-4 wow fadeInUp wow-delay-3">
                         <i class="fab fa-twitter text-danger fa-2x"></i>
-                        <p> Tweetable <br> Abstracts</p>
+                        <p>Tweetable <br> Abstracts</p>
                     </div>
                 </div>
 
-                <div class="row border-top ">
-                    <div class="col-6 mt-2">
+                <div class="row border-top">
+                    <div class="col-6 mt-2 wow fadeInUp wow-delay-4">
                         <p class="fw-bold">Delivery</p>
                         <p>7 Business Days</p>
                     </div>
-                    <div class="col-6 mt-2">
+                    <div class="col-6 mt-2 wow fadeInUp wow-delay-5">
                         <p class="fw-bold">Price</p>
                         <p>$400</p>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
 
-    <!-- Service Content End -->
+    <!-- Main table start -->
     <div class="container my-5">
-        <div class="card citation-card">
+        <div class="card citation-card wow fadeInUp">
             <div class="card-header p-0">
                 <ul class="nav nav-tabs nav-justified" id="citationTabs" role="tablist">
-                    <li class="nav-item " role="presentation">
+                    <li class="nav-item wow fadeInLeft wow-delay-1" role="presentation">
                         <button class="nav-link active fw-bold" id="news-tab" data-bs-toggle="tab"
                             data-bs-target="#news" type="button" role="tab" aria-controls="news" aria-selected="true"
                             style="color: black;">Scientific News Report</button>
                     </li>
-                    <li class="nav-item " role="presentation">
+                    <li class="nav-item wow fadeInLeft wow-delay-2" role="presentation">
                         <button class="nav-link fw-bold" id="simplified-tab" data-bs-toggle="tab"
                             data-bs-target="#simplified" type="button" role="tab" aria-controls="simplified"
-                            aria-selected="false" style="color: black;" style="color: black;">Simplified
-                            Abstracts</button>
+                            aria-selected="false" style="color: black;">Simplified Abstracts</button>
                     </li>
-                    <li class="nav-item t " role="presentation">
+                    <li class="nav-item wow fadeInLeft wow-delay-3" role="presentation">
                         <button class="nav-link fw-bold" id="tweetable-tab" data-bs-toggle="tab"
                             data-bs-target="#tweetable" type="button" role="tab" aria-controls="tweetable"
                             aria-selected="false" style="color: black;">Tweetable Abstracts</button>
@@ -196,7 +196,6 @@
                 </ul>
             </div>
             <div class="card-body tab-content" id="citationTabsContent">
-
                 <div class="tab-pane fade show active" id="news" role="tabpanel" aria-labelledby="news-tab">
                     <p class="fw-bold mt-3">
                         Scientific News Report involves the transformation of your manuscript into a media-ready press
@@ -221,7 +220,7 @@
                             <p class="mb-1">Sample 1 – 620 Words (Manuscript Word Count - 4,000 words)</p>
                         </div>
                         <div class="col-md-4 col-12">
-                            <a href="#" class="btn btn-danger fw-bold" style="background:#d32f2f;">
+                            <a target="_blank" href="./assests/Scientific-News-Report-Sample-Insertion-Of-Pressure.pdf" class="btn btn-danger fw-bold" style="background:#d32f2f;">
                                 <i class="fa fa-file-pdf-o me-2"></i>View Sample
                             </a>
                         </div>
@@ -231,7 +230,7 @@
                             <p class="mb-1">Sample 2 – 600 Words (Manuscript Word Count - 5,000 words)</p>
                         </div>
                         <div class="col-md-4 col-12">
-                            <a href="#" class="btn btn-danger fw-bold" style="background:#d32f2f;">
+                            <a target="_blank" href="./assests/Scientific-News-Report-Sample-Spasm-Provocation.pdf" class="btn btn-danger fw-bold" style="background:#d32f2f;">
                                 <i class="fa fa-file-pdf-o me-2"></i>View Sample
                             </a>
                         </div>
@@ -406,7 +405,7 @@
                             </p>
                         </div>
                         <div class="col-md-4 col-12">
-                            <a href="#" class="btn btn-danger fw-bold">
+                            <a target="_blank" href="./assests/Simplified-Abstracts-Sample-Spasm-Provocation.pdf" class="btn btn-danger fw-bold">
                                 <i class="fa fa-file-pdf-o me-2"></i>View Sample
                             </a>
                         </div>
@@ -417,7 +416,7 @@
                             </p>
                         </div>
                         <div class="col-md-4 col-12">
-                            <a href="#" class="btn btn-danger fw-bold">
+                            <a target="_blank" href="./assests/Simplified-Abstracts-Sample-Insertion-Of-Pressure.pdf" class="btn btn-danger fw-bold">
                                 <i class="fa fa-file-pdf-o me-2"></i>View Sample
                             </a>
                         </div>
@@ -548,7 +547,7 @@
                     </p> 
                     <h5 class="fw-bold mt-4">Sample Tweets</h5>
                     <div class="row mb-2">
-                        <!-- INSERT_YOUR_CODE -->
+                        
                         <div class="col-md-6 mb-4">
                             <div class="fw-bold" style="font-size:1rem;">
                                 Importance of the Spasm Provocation Test in Diagnosing and Clarifying the Activity of
@@ -794,6 +793,28 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        // Initialize WOW.js
+        new WOW().init();
+
+        function activateTab(tabId) {
+            var tabEl = document.getElementById(tabId);
+            if (tabEl) {
+                var tab = new bootstrap.Tab(tabEl);
+                tab.show();
+        
+                const contentId = tabEl.getAttribute("href")?.replace("#", "");
+                if (contentId) {
+                    const contentPane = document.getElementById(contentId);
+                    if (contentPane) {
+                        contentPane.scrollIntoView({ behavior: "smooth" });
+                    }
+                }
+            } else {
+                console.warn("Tab not found:", tabId);
+            }
+        }
+    </script>
 </body>
 
 </html>
