--- a/journal-selection.html
+++ b/journal-selection.html
@@ -17,7 +17,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="./index.html">
                 <img src="https://propublicationhub.com/images/common/logo-header.png" alt="Logo" height="40"
                     class="me-2">
                 <span class="fw-bold text-danger" style="font-size:1.5rem;"><span class="text-dark"></span></span>
@@ -37,10 +37,10 @@
                             Primary Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="primaryDropdown">
-                            <li><a class="dropdown-item" href="journal-selection.html">Journal Selection</a></li>
+                            <li><a class="dropdown-item text-danger" href="journal-selection.html">Journal Selection</a></li>
                             <li><a class="dropdown-item" href="peerreviewandsubmtion.html">Pre-Submission Peer Review</a></li>
                             <li><a class="dropdown-item" href="formatingandartwork.html">Formatting and Artwork Editing</a></li>
-                            <li><a class="dropdown-item text-danger" href="journalsubmission.html">Journal Submission</a></li>
+                            <li><a class="dropdown-item " href="journalsubmission.html">Journal Submission</a></li>
                             <li><a class="dropdown-item" href="revised-rejected-paper-editing.html">Revised/Rejected Paper Editing</a></li>
                             <li><a class="dropdown-item" href="palgarism-check.html">Plagiarism Check</a></li>
                         </ul>
@@ -54,16 +54,20 @@
                             <li><a class="dropdown-item " href="citation-booster.html">Citation Booster</a></li>
                             <li><a class="dropdown-item" href="grant-wtiting.html">Grant Writing</a></li>
                             <li><a class="dropdown-item" href="poster-preparation.html">Poster Preparation</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Video Development</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Statistical Analysis</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Graphical Analysis</a></li>
+                            <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Pricing</a>
+                        <a class="nav-link text-dark" href="pricing.html">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-danger rounded-pill ms-lg-3 px-4 py-2 d-none d-lg-block">Get A Quote</a>
+                <a href="contact.html" class="btn btn-danger rounded-pill ms-lg-3 px-4 py-2 d-none d-lg-block">Get A Quote</a>
             </div>
         </div>
     </nav>
