--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     role="tab" aria-controls="step3" aria-selected="false">
                     Journal Submission
                 </a>
-                <a class="list-group-item list-group-item-action bg-white" id="step4-tab" data-bs-toggle="tab"
+                <a class="list-group-item list-group-item-action " id="step4-tab" data-bs-toggle="tab"
                     href="#step4" role="tab" aria-controls="step4" aria-selected="false">
                     Screening
                 </a>
